--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         Mas pouco tempo depois, as empresas Fundação Mozila, Apple e Opera anunciaram a criação de uma organização que visava a evolução do HTML, tal organização foi denominada WHATWG, a qual passou a desenvolver a linguagem XHTML.​</p>
 
         <p> Conheça um pouco mais sobre Javascript, basta <a href="Javascript.html">clicar aqui</a> </p> 
+        <p> Quer ver um exemplo de posicionamento? <a href="posicionamento.html">Clique aqui</a> </p>
     </div>
     <footer>Rodapé</footer>
 </body>
