--- a/Javascript.html
+++ b/Javascript.html
@@ -9,10 +9,24 @@
 <body>
 	<header>
 		<nav>
-			<h1>Javascript</h1>
+	 <header class="fixo">
+    	<h1><img class="imglogo" src="img/logotipo.png"></h1>
+		<nav class="menu-opcoes">
+			<ul class="ajustes">
+				<li><a href="index.html">Inicio</a></li>
+				<li><a href="index.html#htmlecss">Html e Css</a></li>
+				<li><a href="index.html#curiosidades">Curiosidades</a></li>
+				<li><a href="Javascript.html">javaScript</a></li>
+				<li><a href="posicionamento.html">Posicionamento</a></li>
+				<li><a href="#">Contato</a></li>
+			</ul>
+		</nav>
+	</header>
 		</nav>
 	</header>
 	<div class="container">
+		<h1>Javascript</h1>
+
      	<p> O Javascript é uma das linguagens de programação mais populares do mundo.</p>
 
 	    <h2> Mas porque estudar o Javascript? </h2>
