--- a/posicionamento.html
+++ b/posicionamento.html
@@ -81,7 +81,7 @@
 	<div class="main">
 		<h1> Testando...</h1>
 		<div class="container">
-			<img src="Imagens/Fundo.jpg">
+			<img src="img/Fundo.jpg">
 			<div class="topoesquerda"> No topo esquerda</div>
 			<div class="topodireita"> No topo direita</div>
 			<div class="abaixoesquerda"> Abaixo esquerda</div>
