--- a/index.html
+++ b/index.html
@@ -8,28 +8,40 @@
     
 </head>
 <body>
-    <header>
-		<nav>
-			<h1> HTML (Hyper Text Markup Language) </h1>
+    <header class="fixo">
+    	<h1><img class="imglogo" src="img/logotipo.png"></h1>
+		<nav class="menu-opcoes">
+			<ul class="ajustes">
+				<li><a href="index.html">Inicio</a></li>
+				<li><a href="#htmlecss">Html e Css</a></li>
+				<li><a href="#curiosidades">Curiosidades</a></li>
+				<li><a href="Javascript.html">javaScript</a></li>
+				<li><a href="posicionamento.html">Posicionamento</a></li>
+				<li><a href="#">Contato</a></li>
+			</ul>
 		</nav>
 	</header>
-    <div class="Container"> 
-
-        <p> é uma Linguagem de Marcação de Hipertexto utilizada para criação de páginas da Web. Essa é a linguagem que o seu navegador (Browser) decodifica para exibir as páginas.
-	    Hipertexto pode ser definido como todo o conteúdo o qual se encontra inserido em um documento para a web, sendo que sua principal característica seria a possibilidade de se interligar a outros documentos também na web.
-        O HTML é baseado no conceito de Hipertexto. Hipertexto são conjuntos de elementos – ou nós – ligados por conexões. Estes elementos podem ser palavras, imagens, vídeos, áudio, documentos etc.​ </p>
-              <h2> Para que serve o CSS?</h2>
-        <p> O CSS é usado para deixar seu site mais bonito, deixando letras, fundo e até imagens centralizadas e coloridas.</p>
-        <p> Um site muito usado para ver e colocar cores nas letras se chama Homehost, caso queira ve-lo basta clicar <a href="https://www.homehost.com.br/blog/tutoriais/tabela-de-cores-html/"target="blank">aqui</a>  </p>
-	          <h2>Breve Histórico da evolução do  HTML​  </h2>
-	    <p> Desde a invenção da web em 1992 por Tim Berners-Lee, a HTML evoluiu a cada versão lançada, sendo a versão mais atual a HTML5. (SILVA, 2011,)​ </p>
-	    <img src="imagens/Slide4(2).jpg">
-	          <h1> O que é o W3C​? </h1>
-	    <p> O W3C (World Wide Web Consortium), criado em outubro de 1994 por Tim Berners-Lee, é um consórcio internacional formado por empresas, instituições, pesquisadores, desenvolvedores e público em geral. A finalidade desse consórcio é desenvolver a web a seu potencial máximo, criando normas, especificações e padronizações que se aplicam aos mais diversos segmentos e setores da web. (W3C, ONLINE)​. Durante os próximas anos, o W3C publicou várias especificações (chamadas “recomendações”) incluindo o HTML, o formato de imagens PNG, e as Folhas de Estilo em Cascata versões 1 e 2.​</p>
-	    <p>Para saber mais sobre o W3SCHOOLS <a href="https://www.w3schools.com/"target="blank">Clique aqui</a></p>
-	          <h2> Curiosidades </h2>
-	    <p> Uma curiosidade a respeito da evolução do HTML é que em um workshop da W3C em 2004 as empresas Mozila e Opera apresentaram uma proposta para evolução do HTML4 para o HTML5, mas a W3C se recusou a dar continuidade a essa ideia.​
-        Mas pouco tempo depois, as empresas Fundação Mozila, Apple e Opera anunciaram a criação de uma organização que visava a evolução do HTML, tal organização foi denominada WHATWG, a qual passou a desenvolver a linguagem XHTML.​</p>
+    <div class="container">
+    	<div id="htmlecss">
+		    <h1 class="titulos"> HTML (Hyper Text Markup Language) </h1> 
+		        <p> é uma Linguagem de Marcação de Hipertexto utilizada para criação de páginas da Web. Essa é a linguagem que o seu navegador (Browser) decodifica para exibir as páginas.
+			    Hipertexto pode ser definido como todo o conteúdo o qual se encontra inserido em um documento para a web, sendo que sua principal característica seria a possibilidade de se interligar a outros documentos também na web.
+		        O HTML é baseado no conceito de Hipertexto. Hipertexto são conjuntos de elementos – ou nós – ligados por conexões. Estes elementos podem ser palavras, imagens, vídeos, áudio, documentos etc.​ </p>
+	        <h2> Para que serve o CSS?</h2>
+		        <p> O CSS é usado para deixar seu site mais bonito, deixando letras, fundo e até imagens centralizadas e coloridas.</p>
+		        <p> Um site muito usado para ver e colocar cores nas letras se chama Homehost, caso queira ve-lo basta clicar <a href="https://www.homehost.com.br/blog/tutoriais/tabela-de-cores-html/"target="blank">aqui</a>  </p>
+		    <h2>Breve Histórico da evolução do  HTML​  </h2>
+			    <p> Desde a invenção da web em 1992 por Tim Berners-Lee, a HTML evoluiu a cada versão lançada, sendo a versão mais atual a HTML5. (SILVA, 2011,)​ </p>
+			    <img class="imgtexto" src="img/slide.jpg">
+		    <h1> O que é o W3C​? </h1>
+			    <p> O W3C (World Wide Web Consortium), criado em outubro de 1994 por Tim Berners-Lee, é um consórcio internacional formado por empresas, instituições, pesquisadores, desenvolvedores e público em geral. A finalidade desse consórcio é desenvolver a web a seu potencial máximo, criando normas, especificações e padronizações que se aplicam aos mais diversos segmentos e setores da web. (W3C, ONLINE)​. Durante os próximas anos, o W3C publicou várias especificações (chamadas “recomendações”) incluindo o HTML, o formato de imagens PNG, e as Folhas de Estilo em Cascata versões 1 e 2.​</p>
+			    <p>Para saber mais sobre o W3SCHOOLS <a href="https://www.w3schools.com/"target="blank">Clique aqui</a></p>
+		</div>
+		<div id="curiosidades">
+		    <h2> Curiosidades </h2>
+			    <p> Uma curiosidade a respeito da evolução do HTML é que em um workshop da W3C em 2004 as empresas Mozila e Opera apresentaram uma proposta para evolução do HTML4 para o HTML5, mas a W3C se recusou a dar continuidade a essa ideia.​
+		        Mas pouco tempo depois, as empresas Fundação Mozila, Apple e Opera anunciaram a criação de uma organização que visava a evolução do HTML, tal organização foi denominada WHATWG, a qual passou a desenvolver a linguagem XHTML.​</p>
+	    </div>
 
         <p> Conheça um pouco mais sobre Javascript, basta <a href="Javascript.html">clicar aqui</a> </p> 
         <p> Quer ver um exemplo de posicionamento? <a href="posicionamento.html">Clique aqui</a> </p>
