--- a/Javascript.html
+++ b/Javascript.html
@@ -18,7 +18,7 @@
 				<li><a href="index.html#curiosidades">Curiosidades</a></li>
 				<li><a href="Javascript.html">javaScript</a></li>
 				<li><a href="posicionamento.html">Posicionamento</a></li>
-				<li><a href="#">Contato</a></li>
+				<li><a href="contato.html">Contato</a></li>
 			</ul>
 		</nav>
 	</header>
