--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<li><a href="#curiosidades">Curiosidades</a></li>
 				<li><a href="Javascript.html">javaScript</a></li>
 				<li><a href="posicionamento.html">Posicionamento</a></li>
-				<li><a href="#">Contato</a></li>
+				<li><a href="contato.html">Contato</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -28,7 +28,11 @@
 			    Hipertexto pode ser definido como todo o conteúdo o qual se encontra inserido em um documento para a web, sendo que sua principal característica seria a possibilidade de se interligar a outros documentos também na web.
 		        O HTML é baseado no conceito de Hipertexto. Hipertexto são conjuntos de elementos – ou nós – ligados por conexões. Estes elementos podem ser palavras, imagens, vídeos, áudio, documentos etc.​ </p>
 	        <h2> Para que serve o CSS?</h2>
-		        <p> O CSS é usado para deixar seu site mais bonito, deixando letras, fundo e até imagens centralizadas e coloridas.</p>
+
+	        	<img class="testelogo" src="img/logotipo.png">
+
+		        <p class="testepa">
+		        O CSS é usado para deixar seu site mais bonito, deixando letras, fundo e até imagens centralizadas e coloridas, além de também conseguir personalizar logos como essa</p>
 		        <p> Um site muito usado para ver e colocar cores nas letras se chama Homehost, caso queira ve-lo basta clicar <a href="https://www.homehost.com.br/blog/tutoriais/tabela-de-cores-html/"target="blank">aqui</a>  </p>
 		    <h2>Breve Histórico da evolução do  HTML​  </h2>
 			    <p> Desde a invenção da web em 1992 por Tim Berners-Lee, a HTML evoluiu a cada versão lançada, sendo a versão mais atual a HTML5. (SILVA, 2011,)​ </p>
@@ -41,11 +45,45 @@
 		    <h2> Curiosidades </h2>
 			    <p> Uma curiosidade a respeito da evolução do HTML é que em um workshop da W3C em 2004 as empresas Mozila e Opera apresentaram uma proposta para evolução do HTML4 para o HTML5, mas a W3C se recusou a dar continuidade a essa ideia.​
 		        Mas pouco tempo depois, as empresas Fundação Mozila, Apple e Opera anunciaram a criação de uma organização que visava a evolução do HTML, tal organização foi denominada WHATWG, a qual passou a desenvolver a linguagem XHTML.​</p>
+
 	    </div>
 
         <p> Conheça um pouco mais sobre Javascript, basta <a href="Javascript.html">clicar aqui</a> </p> 
         <p> Quer ver um exemplo de posicionamento? <a href="posicionamento.html">Clique aqui</a> </p>
     </div>
+    <section id="galeria">
+				<div class="galeria">
+					<figure>
+						<img class="imggaleria" src="img/galeria.jpg">
+					</figure>
+				</div>
+				<div class="galeria">
+					<figure>
+						<img class="imggaleria" src="img/galeria1.jpg">
+					</figure>
+				</div>
+				<div class="galeria">
+					<figure>
+						<img class="imggaleria" src="img/galeria2.jpg">
+					</figure>
+				</div>
+				<div class="galeria">
+					<figure>
+						<img class="imggaleria" src="img/galeria3.jpg">
+					</figure>
+				</div>
+				<div class="galeria">
+					<figure>
+						<img class="imggaleria" src="img/galeria4.jpg">
+					</figure>
+				</div>
+				<div class="galeria">
+					<figure>
+						<img class="imggaleria" src="img/galeria5.jpg">
+					</figure>
+				</div>
+			</section>
+  	</div>
     <footer>Rodapé</footer>
 </body>
 </html>
